# laundro-vision-ai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: laundro-vision-ai-en-us.md  laundro-vision-ai-zh-tw.md  laundro-vision-ai.en-US.md  laundro-vision-ai.zh-TW.md
docs/plans/: 2026-05-06-laundro-vision-ai-prd-v1.zh-TW.md  2026-05-06-laundrovision-mvp-plan.md  2026-05-09-location-enrich-plan.md
src/laundro_vision_ai/data/: taiwan_districts.json
src/laundro_vision_ai/models/: schemas.py
src/laundro_vision_ai/services/: location.py
src/laundro_vision_ai/ui/: app.py
tests/: conftest.py  test_api.py  test_config.py  test_location.py  test_schemas.py  test_scoring.py
