[project]
name = "laundro-vision-ai"
version = "0.1.0"
description = "An AI-driven self-service laundromat site selection decision support system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "coverage>=7.10.7",
    "pre-commit>=4.6.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.coverage.run]
branch = true
source = ["src/laundro_vision_ai"]
command_line = "-m pytest"

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Basic error, flake8-builtins, warnings, isort
ignore = ["E501"] # Ignore line too long, if using an external formatter like Black
extend-select = ["B"] # Extend with bugbear rules
unfixable = ["F841"] # Mark unused local variables as unfixable

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
